Use News Gothic; white theme

--- a/src/content/index.html
+++ b/src/content/index.html
@@ -4,7 +4,7 @@ title: jared.uno
 {% extends "layouts/base.twig" %}
 
 {% block content %}
-<article id="work">
+<article id="work" class="index-article">
 	<h2>Things I've Done</h2>
 	<section>
 		<h3>Upstatement</h3>
@@ -32,7 +32,7 @@ title: jared.uno
 	</section>
 </article>
 
-<article id="reading">
+<article id="reading" class="index-article">
 	<h2>Things I've Read</h2>
 	<p>I'm a crazy reader. These are some of the important books and articles that have mattered to me.</p>
 	<div class="content">
