Removed "crazy reader"

--- a/src/content/index.html
+++ b/src/content/index.html
@@ -34,7 +34,7 @@ title: jared.uno
 
 <article id="reading" class="index-article">
 	<h2>Things I've Read</h2>
-	<p>I'm a crazy reader. These are some of the important books and articles that have mattered to me.</p>
+	<p>These are some of the books and articles that have mattered to me.</p>
 	<div class="content">
 	{% for item in data.reading.books %}
 		<section>
