--- a/src/content/index.html
+++ b/src/content/index.html
@@ -9,7 +9,7 @@ title: jared.uno
 	<section>
 		<h3>Upstatement <a href="https://upstatement.com" class="main-link">Our work</a></h3>
 		<p>
-			In 2008 I started a design & technology firm with three friends from college. We're now a 29-person agency in downtown Boston with clients all over the world.
+			In 2008 I started a design & technology firm with three friends from college. We're now a 30+ person agency in downtown Boston with clients all over the world.
 		</p>
 	</section>
 	<section>
