Remove bad joke; add some books

--- a/src/content/index.html
+++ b/src/content/index.html
@@ -48,7 +48,7 @@ title: jared.uno
 
 <article id="talks" class="index-article">
 	<h2>Talks I've Given</h2>
-	<p>I've liked gasbagging in front of an audience ever since I won the third grade talent show*. I'm always on the lookout for future opportunities, <a href="mailto:jared@upstatement.com">email me</a> if you have one.</p>
+	<p>I've liked gasbagging in front of an audience ever since I won the third grade talent show. I'm always on the lookout for future opportunities, <a href="mailto:jared@upstatement.com">email me</a> if you have one.</p>
 	<div class="content">
 		<section>
 			<h6><a href="https://www.slideshare.net/JaredNovack/fuck-this-fucking-agile-bullshit" target="_blank">
@@ -64,12 +64,12 @@ title: jared.uno
 			</h6>
 		</section>
 
-		<section>
+<!-- 		<section>
 			<h6><a href="https://www.slideshare.net/JaredNovack/reheating-leftovers-a-culinary-journey" target="_blank">
 				<span class="title">Reheating Leftovers: A Culinary Journey</span></a>
 				Anyone can make a fresh dish, it takes a true chef to "remix" culinary achievement into a transcendent experience. In this presentation we'll cover key ideas behind reheating pastas, sandwiches, pizza and more.
 			</h6>
-		</section>
+		</section> -->
 
 		<section>
 			<h6><a href="https://www.slideshare.net/JaredNovack/positivity-fuck-yeah" target="_blank">
@@ -85,6 +85,5 @@ title: jared.uno
 			</h6>
 		</section>
 	</div>
-	<p class="endnote">* It's true that Jenny Buck won the actual vote count, but most agreed that her magic act was weak and was carried by having more friends.</p>
 </article>
 {% endblock %}
